[package]
description = "Utilities for M5Stack Cardputer"
documentation = "https://syurazo.github.io/cardputer/"
edition = "2021"
keywords = ["m5stack", "cardputer"]
license = "MIT"
name = "cardputer"
readme = "README.md"
repository = "https://github.com/syurazo/cardputer"
resolver = "2"
version = "0.1.3"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1.0.79"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
esp-idf-hal = "0.42.4"
esp-idf-svc = { version = "0.47.1", features = ["experimental", "alloc"] }
mipidsi = "0.7.1"

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies]
# for examples
log = { version = "0.4", default-features = false }
