[package]
description = "Utilities for M5Stack Cardputer and Cardputer-Adv"
documentation = "https://syurazo.github.io/cardputer/"
edition = "2024"
keywords = ["m5stack", "cardputer"]
license = "MIT"
name = "cardputer"
readme = "README.md"
repository = "https://github.com/syurazo/cardputer"
version = "0.1.3"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1.0.79"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-hal = "1.0.0"
esp-idf-hal = "0.45"
esp-idf-svc = { version = "0.51", features = ["experimental", "alloc"] }
mipidsi = "0.7.1"

[build-dependencies]
embuild = { version = "0.33", features = [ "espidf" ] }

[dev-dependencies]
# for examples
log = { version = "0.4", default-features = false }
