[package]
name = "cardputer-examples"
edition = "2021"
license = "MIT"
resolver = "2"
version = "0.1.0"
publish = false

[[bin]]
name = "key_monitor"
path = "src/key_monitor.rs"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
cardputer = { path = ".." }
esp-idf-hal = "0.42.4"
esp-idf-svc = { version = "0.47.1", features = ["experimental", "alloc"] }
log = { version = "0.4", default-features = false }

[build-dependencies]
embuild = "0.31.3"
